# heyosx

./: .gitignore  README.md  build.sh  packages.x86_64  pacman.conf  profiledef.sh
airootfs/etc/: hostname  issue  mkinitcpio.conf  os-release
airootfs/etc/greetd/: config.toml
airootfs/etc/pam.d/: hey-greeter
airootfs/etc/sddm.conf.d/: autologin.conf  wayland.conf
airootfs/etc/sudoers.d/: 00-heyos
airootfs/etc/systemd/system/: hey-greeter.service
airootfs/root/: customize_airootfs.sh
airootfs/usr/share/wayland-sessions/: heydm.desktop
efiboot/loader/: loader.conf
efiboot/loader/entries/: 01-heyos-linux.conf  02-memtest.conf
hey-greeter/: Cargo.toml
hey-greeter/src/: auth.rs  main.rs  session.rs  ui.rs
heydm/: Cargo.toml
heydm/src/: input.rs  launcher.rs  main.rs  panel.rs  render.rs  state.rs  window.rs
heygreeter/: Cargo.toml  build.rs
heygreeter/src/: main.rs
heygreeter/ui/: greeter.slint
syslinux/: archiso_head.cfg  archiso_sys-linux.cfg  archiso_tail.cfg
