[package]
name = "hey-greeter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.9"
greetd_ipc = { version = "0.9", features = ["sync-codec"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
users = "0.11"
pam-auth = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shlex = "1.3"
chrono = "0.4"

[build-dependencies]
slint-build = "1.9"
